Starting STAC demo for Resource Catalogue

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1138,6 +1138,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39b444fc-db2b-47d1-b1ec-4d3afc037ee2",
+   "metadata": {},
+   "source": [
+    "### STAC API demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d2a3107-e895-4881-a6b6-8c50d086e1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pystac_client import Client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbad6f94-c992-4c5a-b4d9-bbe2b304b79f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog = Client.open(system_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aab6b68c-53d4-40c5-a747-e56455d82f42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
+    "print(f\"{mysearch.matched()} items found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6102d68f-b0b4-4884-880a-6e6472ecdb2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in mysearch.items():\n",
+    "    print(item.id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8024d488-6a53-4821-b491-7c33f2a1612c",
    "metadata": {},
    "source": [
