--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -997,6 +997,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a151297-f59c-4d94-8447-dfbc65bf9b28",
+   "metadata": {},
+   "source": [
+    "Conformance classes supported by the OGC API Records server:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8e477c07-965a-444e-8577-9b222c32b90c",
@@ -1007,6 +1015,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b92f279f-3c1f-407f-9860-22d833cf6cce",
+   "metadata": {},
+   "source": [
+    "OpenAPI document of the OGC API Records server:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "59acaa0f-8070-4415-9676-b63c60e76731",
@@ -1014,6 +1030,14 @@
    "outputs": [],
    "source": [
     "w.api()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "764ae3ea-8b07-4b4e-a4c2-8842f13a645f",
+   "metadata": {},
+   "source": [
+    "Collections available on the catalogue:"
    ]
   },
   {
@@ -1047,6 +1071,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e15d32c-89aa-4453-8dcd-10faf09936eb",
+   "metadata": {},
+   "source": [
+    "The user can then specify the collection to search within the catalogue:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9fe1b3ef-3cf4-4e6a-9bb4-5c6c500098ed",
@@ -1067,6 +1099,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36deb327-d2fb-490e-b585-634c514075a6",
+   "metadata": {},
+   "source": [
+    "Collection level queryables:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d367eff4-ad5b-4fc0-a2cd-db464277a320",
@@ -1077,6 +1117,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc6888f2-df55-4d20-b58a-5934ed7bb3e9",
+   "metadata": {},
+   "source": [
+    "The user initialized a catalogue query for the specific collection:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "610888de-980a-40ba-8958-719ccf6cb835",
@@ -1084,6 +1132,16 @@
    "outputs": [],
    "source": [
     "my_catalogue_query = w.collection_items('metadata:main')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e9c9421-458e-4b75-ae82-e55ef609d68b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query['numberMatched']"
    ]
   },
   {
@@ -1127,6 +1185,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee49eaaf-8e9a-4cb1-9622-d3c1c078d791",
+   "metadata": {},
+   "source": [
+    "Full query result:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4d5384be-3bfb-43da-a88e-f13f5ddeb264",
@@ -1167,23 +1233,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab6b68c-53d4-40c5-a747-e56455d82f42",
+   "id": "7f234536-7328-4373-ae8a-8302cb86b2e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
+    "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
+    "#mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6102d68f-b0b4-4884-880a-6e6472ecdb2e",
+   "id": "6d832ee2-384e-4d65-832b-0149e592f1c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for item in mysearch.items():\n",
-    "    print(item.id)"
+    "result = mysearch.get_all_items_as_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b4d096-2335-4f7d-8625-9d6222ef1a52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in result['features']:\n",
+    "    print(item['id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e3d5306-fabc-4f15-ab69-cbcbafc43871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# items = mysearch.get_items()\n",
+    "# for item in items:\n",
+    "#     print(item)"
    ]
   },
   {
