Updating STAC API demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1217,7 +1217,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pystac_client import Client"
+    "from pystac_client import Client\n",
+    "from pystac_client import ConformanceClasses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10dde737-eff2-4894-b784-47452031f4b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
    ]
   },
   {
@@ -1228,6 +1239,66 @@
    "outputs": [],
    "source": [
     "catalog = Client.open(system_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b2f23f2-99e7-4a39-bd99-7eb48c08c31c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "496f811e-a3f4-4b26-8c72-8ae345f4999e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99eda27f-8f95-484b-adf5-64f6e40d5043",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f887e5a-796d-4593-bedb-d805febe318f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(ConformanceClasses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "151690bc-396a-4c0a-86df-3f1ae888b6d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.assert_conforms_to(ConformanceClasses.ITEM_SEARCH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e46ac39f-8aa6-4392-a97c-02ce7e0fd767",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog.assert_conforms_to(ConformanceClasses.CORE)"
    ]
   },
   {
