Updating STAC API demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -27,7 +27,8 @@
     "from owslib.ogcapi.records import Records\n",
     "from owslib.fes import And, Or, PropertyIsEqualTo, PropertyIsGreaterThanOrEqualTo, PropertyIsLessThanOrEqualTo, PropertyIsLike, BBox, SortBy, SortProperty\n",
     "from geolinks import sniff_link\n",
-    "import folium"
+    "import folium\n",
+    "import json"
    ]
   },
   {
@@ -1310,28 +1311,8 @@
    "source": [
     "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
     "#mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
+    "#mysearch = catalog.search(collections=['metadata:main'], bbox=[37, 13.9, 37.9, 15.1], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d832ee2-384e-4d65-832b-0149e592f1c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = mysearch.get_all_items_as_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66b4d096-2335-4f7d-8625-9d6222ef1a52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in result['features']:\n",
-    "    print(item['id'])"
    ]
   },
   {
@@ -1341,9 +1322,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# items = mysearch.get_items()\n",
-    "# for item in items:\n",
-    "#     print(item)"
+    "items = mysearch.get_items()\n",
+    "for item in items:\n",
+    "    print(item.id)\n",
+    "    #print(item.to_dict())\n",
+    "    #print(json.dumps(item.to_dict(), indent=2))"
    ]
   },
   {
