Adding OGC API Records bbox example

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1172,7 +1172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_query2 = w.collection_items('metadata:main', q='Orthoimagery')"
+    "#my_catalogue_query2 = w.collection_items('metadata:main', q='Orthoimagery')\n",
+    "my_catalogue_query2 = w.collection_items('metadata:main', bbox=['13.9','37','15.1','37.9'])"
    ]
   },
   {
