Make OGC API Records part more verbose

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1122,7 +1122,7 @@
    "id": "bc6888f2-df55-4d20-b58a-5934ed7bb3e9",
    "metadata": {},
    "source": [
-    "The user initialized a catalogue query for the specific collection:"
+    "Query the catalogue for all records:"
    ]
   },
   {
@@ -1146,6 +1146,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fe916de-0436-43a6-9771-c66fbe4ca619",
+   "metadata": {},
+   "source": [
+    "Metadata of first result:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9564c479-6760-4377-a85c-358d55401f71",
@@ -1163,6 +1171,14 @@
    "outputs": [],
    "source": [
     "my_catalogue_query['features'][0]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37392923-bf30-47ee-8b4f-70a25e9b956c",
+   "metadata": {},
+   "source": [
+    "Query the catalogue using filters:"
    ]
   },
   {
