Make STAC API part more verbose

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1229,6 +1229,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a84eb2de-869b-4a30-a67e-88d7cfdd5ab2",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will use the system level resource catalogue STAC API endpoint to discover data datasets.\n",
+    "The `pystac_client` library is used as a STAC client."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2d2a3107-e895-4881-a6b6-8c50d086e1fe",
@@ -1257,6 +1266,14 @@
    "outputs": [],
    "source": [
     "catalog = Client.open(system_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12ba3b68-8d2b-4963-8e51-d1b281ecb06f",
+   "metadata": {},
+   "source": [
+    "STAC catalogue metadata:"
    ]
   },
   {
@@ -1290,6 +1307,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8e330f9-17bc-4798-944f-a23b9ef64a47",
+   "metadata": {},
+   "source": [
+    "Conformance classes supported by the STAC API endpoint:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8f887e5a-796d-4593-bedb-d805febe318f",
@@ -1297,6 +1322,14 @@
    "outputs": [],
    "source": [
     "dir(ConformanceClasses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4bcd6a1-5886-4b4d-abc1-ad820090228d",
+   "metadata": {},
+   "source": [
+    "Validation of STAC API using `pystac_client`:"
    ]
   },
   {
@@ -1320,6 +1353,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e2b1bd5-8a4d-49e0-8317-5508e96a96f7",
+   "metadata": {},
+   "source": [
+    "Query the STAC API using filters:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f234536-7328-4373-ae8a-8302cb86b2e4",
@@ -1328,8 +1369,16 @@
    "source": [
     "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
     "#mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
-    "#mysearch = catalog.search(collections=['metadata:main'], bbox=[37, 13.9, 37.9, 15.1], max_items=10)\n",
+    "#mysearch = catalog.search(collections=['metadata:main'], bbox=[13.9,37,15.1,37.9], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "691602b7-6736-4b61-a89e-1b8ff71dbd35",
+   "metadata": {},
+   "source": [
+    "Iterate through the query results:"
    ]
   },
   {
