Update STAC API demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1354,6 +1354,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6b99c79c-e60c-4203-8721-d15d16523327",
+   "metadata": {},
+   "source": [
+    "Query the catalogue for all STAC items:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c198d93e-4905-4e9a-932e-9c9fb8616954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
+    "print(f\"{mysearch.matched()} items found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8e2b1bd5-8a4d-49e0-8317-5508e96a96f7",
    "metadata": {},
    "source": [
@@ -1367,9 +1386,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
+    "mysearch = catalog.search(collections=['metadata:main'], bbox=[13.9,37,15.1,37.9], max_items=10)\n",
     "#mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
-    "#mysearch = catalog.search(collections=['metadata:main'], bbox=[13.9,37,15.1,37.9], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
    ]
   },
@@ -1390,9 +1408,26 @@
    "source": [
     "items = mysearch.get_items()\n",
     "for item in items:\n",
-    "    print(item.id)\n",
-    "    #print(item.to_dict())\n",
-    "    #print(json.dumps(item.to_dict(), indent=2))"
+    "    print(item.id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acaefe17-80d5-488f-bd8f-f2673161b9a0",
+   "metadata": {},
+   "source": [
+    "Show last STAC item JSON:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "088e7dfb-ac40-49bc-940f-5aa2416bd227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(json.dumps(item.to_dict(), indent=2))\n",
+    "#print(item.to_dict())"
    ]
   },
   {
