--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -38,8 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"185.52.193.87.nip.io\"\n",
-    "#base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"demo.eoepca.org\"\n",
+    "#base_domain = \"develop.eoepca.org\"\n",
+    "#base_domain = \"185.52.193.87.nip.io\"\n",
     "#workspace_prefix = \"demo-user\"\n",
     "workspace_prefix = \"user\""
    ]
