Adding CQL query examples in Resource Catalogue demo

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1223,6 +1223,72 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20346504-8de2-4bc3-92fc-a321cfd45c98",
+   "metadata": {},
+   "source": [
+    "Text CQL query:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd7eb4b8-46c0-4b85-ab03-b7bba6267983",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'INDEX_S2A_MSIL2A_%'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5458640e-7b02-49ef-b7e7-028e376690ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ed3b9ff-91d5-48be-a5d1-609827c658d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['features'][0]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43b79c0e-0452-4812-aa27-b441fc7230a1",
+   "metadata": {},
+   "source": [
+    "JSON CQL query:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d43561-dabe-4fcc-9a52-e6ca1090ce82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'eq': [{ 'property': 'title' }, 'INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90fd58c4-ab5b-4db4-9646-d29e667a400e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_json_query['features'][0]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "39b444fc-db2b-47d1-b1ec-4d3afc037ee2",
    "metadata": {},
    "source": [
