fix CQL example

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1236,7 +1236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'INDEX_S2A_MSIL2A_%'\")"
+    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'S2B_MSIL1C_%'\")"
    ]
   },
   {
@@ -1274,7 +1274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'eq': [{ 'property': 'title' }, 'INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808']})"
+    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'eq': [{ 'property': 'title' }, 'S2B_MSIL1C_20190910T095029_N0208_R079_T33TXN_20190910T120910.SAFE']})"
    ]
   },
   {
