Disable walking through all results, too many records now in the catalogue

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -164,8 +164,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
+    "#Disabling since we have too many records now\n",
+    "#for rec in csw.records:\n",
+    "#    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
    ]
   },
   {
@@ -330,8 +331,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
+    "#Disabling since we have too many records now\n",
+    "#for rec in csw.records:\n",
+    "#    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
    ]
   },
   {
