UM demo updated

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -18,7 +18,8 @@
    "source": [
     "import utils.DemoClient as client\n",
     "import jwt\n",
-    "import json"
+    "import json\n",
+    "import requests"
    ]
   },
   {
@@ -40,11 +41,11 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "base_domain = \"185.52.193.87.nip.io\"\n",
+    "base_domain = \"demo.eoepca.org\"\n",
     "platform_domain = \"test.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
     "demo = client.DemoClient(base_url)\n",
-    "demo.register_client()\n",
+    "demo.register_um_client()\n",
     "demo.save_state()"
    ]
   },
@@ -106,7 +107,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abstract-google",
    "metadata": {},
    "source": [
     "The ID Token (JWT) identifies the user via user_name / sub (Subject) fields, and the client via the aud (Audience) field. The JWT is signed and can be verified, using the kid (Key ID) field, via the JWKS endpoint of the Authorization Server."
@@ -117,6 +117,89 @@
    "id": "proper-origin",
    "metadata": {},
    "source": [
+    "## External ID Provider Login"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d323c53",
+   "metadata": {},
+   "source": [
+    "The current External IdPs are GitHub and COIH, this test will apply the authorization code flow of OAuth2, where a first request to the authorization endpoint of the LS will return a code once the external user is authenticated. Afterwards the code will be used to retrieve an access token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ffe37d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rauth import OAuth2Service\n",
+    "client_id, client_secret = demo.get_client_credentials()\n",
+    "\n",
+    "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
+    "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
+    "base_url= \"https://\"+platform_domain+\"/\"\n",
+    "scope = ['openid', 'email', 'user_name', 'is_operator']\n",
+    "redirect_uri = 'http://localhost:8888/callback/'\n",
+    "code = None\n",
+    "\n",
+    "service = OAuth2Service(\n",
+    "            name=\"foo\",\n",
+    "            client_id=client_id,\n",
+    "            client_secret=client_secret,\n",
+    "            access_token_url=token_url,\n",
+    "            authorize_url=authorize_url,\n",
+    "            base_url=base_url\n",
+    "        )\n",
+    "\n",
+    "params = {'scope': scope,\n",
+    "          'response_type': 'code',\n",
+    "          'redirect_uri': redirect_uri,\n",
+    "          'acr_values': 'passport_social'}\n",
+    "\n",
+    "url = service.get_authorize_url(**params)\n",
+    "print(\"Link to Social Passport Login: \")\n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efa4c78c",
+   "metadata": {},
+   "source": [
+    "Here you will have to copy/paste the redirection once logged in to retrieve code and continue with the flow. An access token should result as output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e21d6ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "code_url = input('Please paste redirect URL: ').strip()\n",
+    "code = code_url.split('code=')[1].split('&')[0]\n",
+    "data = {\n",
+    "  'client_id': client_id,\n",
+    "  'client_secret': client_secret,\n",
+    "  'code': code,\n",
+    "  'grant_type': 'authorization_code',\n",
+    "  'redirect_uri': 'http://localhost:8888/callback/'\n",
+    "}\n",
+    "response = requests.post(token_url, data=data)\n",
+    "print(response.text)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ce5766",
+   "metadata": {},
+   "source": [
     "## Access Protected Endpoint\n",
     "We perform an example access to an ADES resource.\n",
     "The ADES is protected by a PEP (Policy Enforcement Point). When accessing the protected endpoint the client follows a UMA (User Managed Access) flow to obtain authorized access on behalf of the user. The UMA flow utilises the ID Token to obtain a 'ticket' which can then be exchanged by the client for an access token (RPT - Relying Party Token) that acts as a short-lived (e.g. 5 mins) credential for the specific access by a specific client, to a specific resource, on behalf of a specific user."
@@ -125,27 +208,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "downtown-reunion",
+   "id": "95a5d91d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Call ADES 'List Processes' endpoint\n",
-    "ades_proc_url = \"http://ades.\" + platform_domain + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)\n",
+    "#--------------------------\n",
+    "#GET TICKET\n",
+    "#--------------------------\n",
+    "ades_res_proc_url = \"http://ades-pep.\" + base_domain + \"/authorize\" ; print(\"ADES API Processes endpoint:\", ades_res_proc_url)\n",
+    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+user_id_token}\n",
     "\n",
-    "trace = demo.trace_flow; demo.trace_flow = True\n",
-    "response, access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token)\n",
-    "demo.trace_flow = trace"
+    "tkt = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
+    "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "print(\"401 Unauthorized, ticket returned: \"+ticket)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ed53510",
+   "metadata": {},
+   "source": [
+    "Request RPT token from UMA endpoints giving a ticket and the user id_token"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varied-mozambique",
+   "id": "3426dbf1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of processes returned...\n",
-    "print(\"Processes:\", process_ids)"
+    "#--------------------------\n",
+    "#GET RPT\n",
+    "#--------------------------\n",
+    "token_ep= base_url + \"oxauth/restv1/token\"\n",
+    "client_id, client_secret = demo.get_client_credentials()\n",
+    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+user_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "headers= { 'Content-Type': 'application/x-www-form-urlencoded', 'cache-control': 'no-cache' }\n",
+    "rpts_response = requests.post(token_ep, data=data, headers=headers, verify = False)\n",
+    "rpt = rpts_response.json()[\"access_token\"]\n",
+    "print(\"The UMA returns: \" + str(rpts_response))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32856e57",
+   "metadata": {},
+   "source": [
+    "The access_token is returned and the access to the resource is retried with aproved credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce25d9e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "#ACCESS TO RESOURCE (NO TICKET RETURNED)\n",
+    "#--------------------------\n",
+    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt}\n",
+    "tkt = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
+    "print(\"Retrying access to resource with proper token: \"+ str(tkt))"
    ]
   }
  ],
