Update develop base domain url

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -58,7 +58,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "base_domain = \"185.52.193.87.nip.io\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "workspace_prefix = \"rm-user\"\n",
     "#base_domain = \"demo.eoepca.org\"\n",
     "#workspace_prefix = \"demo-user\"\n",
