Adding Alice authentication

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -72,7 +72,7 @@
    "id": "fatal-warrior",
    "metadata": {},
    "source": [
-    "### Authenticated User (Eric)\n",
+    "### Authenticated User (Eric and Alice)\n",
     "We require an authenticated user to interact with some of the platform endpoints - in particular for eoepca v0.3 the ADES.<br>\n",
     "User authenticates and the client receives an ID Token (JWT) that represents the user.<br>\n",
     "For convenience within the Jupyter notebook we use a username/password authentication - but the primary mechanism is to rely upon external identity provision.<br>\n",
@@ -94,6 +94,21 @@
     "USER_ERIC=\"eric\"\n",
     "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
     "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "458eae71-f883-4faf-bd21-bc49dbd6d90e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Authenticate as user 'alice' and get ID Token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "USER_ALICE=\"alice\"\n",
+    "USER_ALICE_PASSWORD=\"defaultPWD\"\n",
+    "alice_id_token = demo.get_id_token(USER_ALICE, USER_ALICE_PASSWORD)"
    ]
   },
   {
