Switch to demo domain url

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -58,10 +58,10 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "base_domain = \"develop.eoepca.org\"\n",
-    "workspace_prefix = \"rm-user\"\n",
-    "#base_domain = \"demo.eoepca.org\"\n",
-    "#workspace_prefix = \"demo-user\"\n",
+    "#base_domain = \"develop.eoepca.org\"\n",
+    "#workspace_prefix = \"rm-user\"\n",
+    "base_domain = \"demo.eoepca.org\"\n",
+    "workspace_prefix = \"demo-user\"\n",
     "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
     "demo.register_client()\n",
     "demo.save_state()"
