Access Alice's Resource Catalogue with id token

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -137,6 +137,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d7f6494-cc6c-4551-b757-379b5eabdc61",
+   "metadata": {},
+   "source": [
+    "Setting up the authentication headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdfd228e-8823-4d12-807a-5db3364c9a92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + alice_id_token\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "professional-ebony",
    "metadata": {},
    "source": [
@@ -150,8 +170,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alice_workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-alice.{base_domain}/csw'\n",
-    "csw = CatalogueServiceWeb(alice_workspace_endpoint,timeout=30)\n",
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ALICE}.{base_domain}/csw'\n",
+    "print(f\"Alice's workspace (catalogue): {workspace_endpoint}\")\n",
+    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30,headers=headers)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "print(\"Alice's workspace records:\\n\")\n",
     "for rec in csw.records:\n",
