Access Eric's Resource Catalogue with id token

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -973,6 +973,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce6eb6ae-248b-42f8-ae55-97cf70399fb7",
+   "metadata": {},
+   "source": [
+    "Setting up the authentication headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f22b489-3ca3-43bb-8518-7e2e0255bd40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + eric_id_token\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6320d23a-3a33-4dc8-91d3-01d2103d623a",
    "metadata": {},
    "source": [
@@ -988,7 +1008,7 @@
    "source": [
     "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
     "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
-    "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30)\n",
+    "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30,headers=headers)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
    ]
@@ -1047,7 +1067,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms = WebMapService(wms_endpoint, version='1.3.0')\n",
+    "wms = WebMapService(wms_endpoint, version='1.3.0', headers=headers)\n",
     "list(wms.contents)"
    ]
   },
