UM Updates on descriptions and procedures

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -44,6 +44,9 @@
     "base_domain = \"demo.eoepca.org\"\n",
     "platform_domain = \"test.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
+    "\n",
+    "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
+    "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
     "demo = client.DemoClient(base_url)\n",
     "demo.register_um_client()\n",
     "demo.save_state()"
@@ -125,7 +128,7 @@
    "id": "6d323c53",
    "metadata": {},
    "source": [
-    "The current External IdPs are GitHub and COIH, this test will apply the authorization code flow of OAuth2, where a first request to the authorization endpoint of the LS will return a code once the external user is authenticated. Afterwards the code will be used to retrieve an access token"
+    "The current External IdPs are GitHub and COIH, this test will apply the authorization code flow of OAuth2, where a first request to the authorization endpoint of the Login Service will return a code once the external user is authenticated. Afterwards the redirection will prompt a GitHub logo Image but in the url we can extract the code,that will be used to retrieve an access token. Copy the URL and proceed to next step"
    ]
   },
   {
@@ -138,22 +141,11 @@
     "from rauth import OAuth2Service\n",
     "client_id, client_secret = demo.get_client_credentials()\n",
     "\n",
-    "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
-    "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
-    "base_url= \"https://\"+platform_domain+\"/\"\n",
     "scope = ['openid', 'email', 'user_name', 'is_operator']\n",
-    "redirect_uri = 'http://localhost:8888/callback/'\n",
+    "redirect_uri =base_url+ \"/oxauth/auth/passport/img/github.png\"\n",
     "code = None\n",
     "\n",
-    "service = OAuth2Service(\n",
-    "            name=\"foo\",\n",
-    "            client_id=client_id,\n",
-    "            client_secret=client_secret,\n",
-    "            access_token_url=token_url,\n",
-    "            authorize_url=authorize_url,\n",
-    "            base_url=base_url\n",
-    "        )\n",
-    "\n",
+    "service = OAuth2Service(name=\"foo\", client_id=client_id, client_secret=client_secret, access_token_url=token_url, authorize_url=authorize_url, base_url=base_url)\n",
     "params = {'scope': scope,\n",
     "          'response_type': 'code',\n",
     "          'redirect_uri': redirect_uri,\n",
@@ -179,8 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "code_url = input('Please paste redirect URL: ').strip()\n",
     "code = code_url.split('code=')[1].split('&')[0]\n",
     "data = {\n",
@@ -188,11 +178,10 @@
     "  'client_secret': client_secret,\n",
     "  'code': code,\n",
     "  'grant_type': 'authorization_code',\n",
-    "  'redirect_uri': 'http://localhost:8888/callback/'\n",
+    "  'redirect_uri': redirect_uri\n",
     "}\n",
     "response = requests.post(token_url, data=data)\n",
-    "print(response.text)\n",
-    "\n"
+    "print(response.text)"
    ]
   },
   {
@@ -225,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed53510",
+   "id": "0af72643",
    "metadata": {},
    "source": [
     "Request RPT token from UMA endpoints giving a ticket and the user id_token"
@@ -241,13 +230,14 @@
     "#--------------------------\n",
     "#GET RPT\n",
     "#--------------------------\n",
-    "token_ep= base_url + \"oxauth/restv1/token\"\n",
+    "token_ep= base_url + \"/oxauth/restv1/token\"\n",
     "client_id, client_secret = demo.get_client_credentials()\n",
     "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+user_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
     "headers= { 'Content-Type': 'application/x-www-form-urlencoded', 'cache-control': 'no-cache' }\n",
     "rpts_response = requests.post(token_ep, data=data, headers=headers, verify = False)\n",
     "rpt = rpts_response.json()[\"access_token\"]\n",
-    "print(\"The UMA returns: \" + str(rpts_response))"
+    "print(\"The UMA returns: \" + str(rpts_response))\n",
+    "print(\"The RPT Token: \"+ str(rpt))"
    ]
   },
   {
