Processing Demo update

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resource_url= 's3://demo-user-bob/application-package/s-expression/s-expression-0_0_2.cwl'\n",
+    "resource_url= f's3://{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
     "demo.workspace_register(workspace_url, workspace_name,resource_url, id_token=user_id_token, access_token=workspace_access_token)"
    ]
   },
