Processing Demo update

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -108,7 +108,8 @@
     "tags": []
    },
    "source": [
-    "### Workspace: Get Details"
+    "### Workspace: Get Details\n",
+    "Retrieve access information to the user workspace S3 bucket (bucket name, access key and secret access key)"
    ]
   },
   {
@@ -130,7 +131,8 @@
    "id": "seeing-deployment",
    "metadata": {},
    "source": [
-    "### Inspect S3 Bucket"
+    "### Inspect User Workspace\n",
+    "Using the access credentials, the user can inspect his S3 bucket."
    ]
   },
   {
@@ -172,7 +174,8 @@
    "id": "794a6e41-2095-402f-8736-9159230b6cd1",
    "metadata": {},
    "source": [
-    "### Upload Application Package and register it"
+    "### Upload Application Package and register it\n",
+    "User uploads the application package to his workspace"
    ]
   },
   {
@@ -189,6 +192,14 @@
     "    print('Application package uploaded successfully')\n",
     "else:\n",
     "    print('Application package not uploaded')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0410339c-a727-4c9e-b631-70e8d2e13b91",
+   "metadata": {},
+   "source": [
+    "User registers the application package to the Resource Catalog"
    ]
   },
   {
@@ -248,7 +259,9 @@
    "id": "framed-russell",
    "metadata": {},
    "source": [
-    "#### ADES: List Processes"
+    "#### ADES: List Processes\n",
+    "**GET {service_url}/processes**<br>\n",
+    "Provides a list of all processes "
    ]
   },
   {
@@ -268,7 +281,11 @@
    "id": "aggregate-scratch",
    "metadata": {},
    "source": [
-    "#### ADES: Deploy Application"
+    "#### ADES: Deploy Application\n",
+    "**POST {service_url}/processes**<br>\n",
+    "Deploys application to the ADES.<br>\n",
+    "Request body is json in which the input is the Application Package describing the application.<br>\n",
+    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/atom+xml_** or **_application/cwl_**. The url to the application package can be either a http or s3 endpoint. In this example we will use the application package previously uploaded to Bob's workspace."
    ]
   },
   {
@@ -281,7 +298,15 @@
     "# API Processes - Deploy Application\n",
     "#response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-atom.json\", id_token=user_id_token, access_token=ades_access_token)\n",
     "\n",
-    "response, access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl-S3.json\", id_token=user_id_token, access_token=ades_access_token)\n"
+    "response, access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl-S3.json\", id_token=user_id_token, access_token=ades_access_token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "713d73c3-4e3b-498c-b6fa-ec0246fd0ac1",
+   "metadata": {},
+   "source": [
+    "Check that the application has been correctly deployed"
    ]
   },
   {
@@ -303,7 +328,10 @@
    "id": "intimate-douglas",
    "metadata": {},
    "source": [
-    "#### ADES: Get Application Details"
+    "#### ADES: Get Application Details\n",
+    "**GET {service_url}/processes/{application_name}**<br>\n",
+    "Provides details of the deployed application<br>\n",
+    "The response includes the API Processes json application description."
    ]
   },
   {
@@ -323,7 +351,12 @@
    "id": "fourth-decline",
    "metadata": {},
    "source": [
-    "#### ADES: Execute Application"
+    "#### ADES: Execute Application\n",
+    "\n",
+    "**POST {service_url}/processes/{application_name}/jobs**<br>\n",
+    "Request body is json as defined by API Processes to define the inputs and outputs, consistent with the CWL Workflow application package.<br>\n",
+    "The response returns **201 CREATED** to indicate that the job has been successfully initiated.<br>\n",
+    "The response **Location header** provides the path (/processes/{application_name}/jobs/{job_id}) to follow the job status."
    ]
   },
   {
@@ -342,7 +375,12 @@
    "id": "frozen-while",
    "metadata": {},
    "source": [
-    "#### ADES: Job Status"
+    "#### ADES: Job Status\n",
+    "\n",
+    "**GET {service_url}/watchjob/processes/{application_name}/jobs/{job_id}**<br>\n",
+    "Checks the status of the previously submitted job - using the URL returned in the Location header of the execute request.<br>\n",
+    "The response body json provides a status string (success/running/failed) and a % progress.<br>\n",
+    "In the case of a failure then a descriptive message is provided."
    ]
   },
   {
@@ -383,7 +421,10 @@
    "id": "suitable-construction",
    "metadata": {},
    "source": [
-    "#### ADES: Job Result"
+    "#### ADES: Job Result\n",
+    "**GET {service_url}/watchjob/processes/{application_name}/jobs/{job_id}/result**<br>\n",
+    "Returns details of the outputs for a successful job execution.<br>\n",
+    "The response body provides json data that includes the reference to the STAC file that indexes the processing outputs."
    ]
   },
   {
@@ -440,7 +481,9 @@
    "id": "ongoing-sleeve",
    "metadata": {},
    "source": [
-    "#### ADES: Undeploy Application"
+    "#### ADES: Undeploy Application\n",
+    "**DELETE {service_url}/processes/{application_name}**<br>\n",
+    "Undeploys application from the ADES"
    ]
   },
   {
